--- a/jquery.html
+++ b/jquery.html
@@ -2,17 +2,45 @@
   <head>
     <title>jQuery</title>
     <script src="jquery.min.js"></script>
+
+    <style type="text/css">
+
+      #circle {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-color: green;
+        margin: 10px;
+      }
+
+      .square {
+        width: 150px;
+        height: 150px;
+        background-color: red;
+        margin: 10px;
+      }
+
+    </style>
   </head>
 
     <body>
 
     <h1>Hello.</h1>
-      <script type="text/javascript">
-        if (typeof jQuery === "undefined") {
-          alert("jQuery is not installed!");
-        } else {
-          alert("jQuery is installed correctly!");
-        }
-      </script>
+
+    <div id="circle"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+
+    <script type="text/javascript">
+    
+      $("#circle").click(function() {
+        alert("Circle was clicked!");
+      });
+
+      $(".square").click(function() {
+        alert("Square was clicked!");
+      });
+
+    </script>
     </body>
 </html>
