--- a/jquery.html
+++ b/jquery.html
@@ -13,32 +13,26 @@
         margin: 10px;
       }
 
-      .square {
-        width: 150px;
-        height: 150px;
-        background-color: red;
-        margin: 10px;
-      }
-
     </style>
   </head>
 
     <body>
 
-    <h1>Hello.</h1>
-
     <div id="circle"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+
+    <p>This is some text.</p>
+
+    <iframe src="http://www.cnn.com"></iframe>
 
     <script type="text/javascript">
-    
+
       $("#circle").click(function() {
-        alert("Circle was clicked!");
+        $("p").html("This text has changed!");
+        alert($("p").html());
       });
 
-      $(".square").click(function() {
-        alert("Square was clicked!");
+      $("iframe").hover(function() {
+        $("iframe").attr("src", "http://www.katu.com");
       });
 
     </script>
