--- a/jquery.html
+++ b/jquery.html
@@ -26,34 +26,17 @@
 
     <div id="circle"></div>
 
-    <div class="square" id="square1"></div>
+    <div class="square"></div>
 
-    <div class="square" id="square2"></div>
+    <div class="square"></div>
 
     <script type="text/javascript">
-      // First version
-      // $("#circle").click(() => {
-      //   $("#circle").css("visibility", "hidden");
-      // });
-      //
-      // $("#square1").click(() => {
-      //   $("#square1").css("visibility", "hidden");
-      // });
-      //
-      // $("#square2").click(() => {
-      //   $("#square2").css("visibility", "hidden");
-      // });
 
-      // Refactor into single function
-      // Using 'this' requires function keyword because of scope
       $("div").click(function() {
-        $(this).css("display", "none");
 
-        if ($(this).attr("id") === "circle") {
-          alert("You clicked the circle");
-        } else {
-          alert("You clicked a square");
-        }
+        $(this).fadeOut("slow", function() {
+          alert("FadeOut has finished.");
+        });
 
       });
 
