131 animating content pt2

--- a/jquery.html
+++ b/jquery.html
@@ -27,7 +27,9 @@
           height:"400px",
           marginLeft:"100px",
           marginTop:"100px"
-        }, 2000);
+        }, 2000, function() {
+          $(this).css("background-color", "red");
+        });
       });
 
     </script>
