--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>AJAX</title>
+  <title>jQuery</title>
   <script src="jquery.min.js"></script>
 
   <style type="text/css">
@@ -14,17 +14,19 @@
 </head>
 
 <body>
-  <p></p>
+
 
   <script type="text/javascript">
+    // regex flags
+    // /abc/i - ignore case
+    // /abc/g - global - return all instances
+    var regex = /is/;
 
-    $.ajax("info.txt")
-      .done(function(data) {
-        $("p").html(data);
-      })
-      .fail(function() {
-        alert("Error fetching data");
-    });
+    var string = "Regex is great.";
+
+    var result = string.match(regex);
+
+    alert(result);
 
   </script>
 
