--- a/form_validate.html
+++ b/form_validate.html
@@ -77,6 +77,21 @@
 
   <script type="text/javascript">
 
+    // Regex test for valid email isn't best but adequate for demo purposes
+    function isEmail(email) {
+      var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+      return regex.test(email);
+    }
+
+    $("#submitButton").click(function() {
+      var errorMessage = "";
+      if (isEmail($("#email").val()) == false) {
+        errorMessage += "<p>Invalid email address</p>";
+      }
+
+      alert(errorMessage);
+    });
+
   </script>
 
 </body>
