--- a/jquery-ui.html
+++ b/jquery-ui.html
@@ -8,17 +8,30 @@
 
   <link type="stylesheet"href="vendor/jquery-ui/jquery-ui.css">
 
+  <style>
+    #draggable {
+      width: 150px;
+      height: 150px;
+      padding: 0.5em;
+    }
+  </style>
+
 </head>
 
 <body>
 
   <div id="wrapper">
 
-
+    <div id="draggable" class="ui-widget-content">
+      <p>Drag me around</p>
+    </div>
+    
   </div>
 
   <script type="text/javascript">
-
+    $( function() {
+      $( "#draggable" ).draggable();
+    } );
   </script>
 
 </body>
