--- a/jquery-ui.html
+++ b/jquery-ui.html
@@ -15,6 +15,7 @@
       padding: 0.5em;
       background-color: green;
     }
+
   </style>
 
 </head>
@@ -30,7 +31,7 @@
   </div>
 
   <script type="text/javascript">
-    $(() => $("#draggable").draggable());
+    $(() => $("#draggable").draggable({ axis: "y" }));
   </script>
 
 </body>
