--- a/jquery-ui.html
+++ b/jquery-ui.html
@@ -6,14 +6,15 @@
   <script type="text/javascript" src="vendor/jquery.min.js"></script>
   <script type="text/javascript" src="vendor/jquery-ui/jquery-ui.js"></script>
 
-  <link type="stylesheet"href="vendor/jquery-ui/jquery-ui.css">
+  <link rel="stylesheet"href="vendor/jquery-ui/jquery-ui.css">
 
-  <style>
+  <style type="text/css">
 
-    #container {
-      width: 400px;
-      height: 300px;
-      background-color: green;
+    #resizable {
+      width: 150px;
+      height: 150px;
+      padding: 0.5em;
+      background-color: LightBlue;
     }
 
   </style>
@@ -22,19 +23,11 @@
 
 <body>
 
-    <div id="draggable" class="ui-widget-content">Drag me horizontally</div>
-
-    <div id="container">
-      <span id="draggable2">Stuck in the box.</span>
-    </div>
-
-  </div>
+    <div id="resizable" class="ui-widget-content"></div>
 
   <script type="text/javascript">
-    $(function() {
-      $("#draggable").draggable({ axis: "x" });
-      $("span").draggable({ containment: "parent" });
-    });
+      $("#resizable").resizable();
+
   </script>
 
 </body>
