141 resizable with snap to grid

--- a/jquery-ui.html
+++ b/jquery-ui.html
@@ -26,7 +26,8 @@
     <div id="resizable" class="ui-widget-content"></div>
 
   <script type="text/javascript">
-      $("#resizable").resizable();
+      // Snap to grid
+      $("#resizable").resizable({ grid: 50 });
 
   </script>
 
