--- a/jquery-ui.html
+++ b/jquery-ui.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 
-  <title>jQuery UI</title>
+  <title>Droppable</title>
 
   <script type="text/javascript" src="vendor/jquery.min.js"></script>
   <script type="text/javascript" src="vendor/jquery-ui/jquery-ui.js"></script>
@@ -10,17 +10,15 @@
 
   <style type="text/css">
 
-    #resizable {
-      width: 150px;
-      height: 150px;
-      padding: 0.5em;
+    #droppable {
+      width: 300px;
+      height: 300px;
       background-color: LightBlue;
     }
 
-    #also {
+    #draggable {
       width: 100px;
       height: 100px;
-      padding: 0.5em;
       background-color: Silver;
     }
 
@@ -30,24 +28,19 @@
 
 <body>
 
-    <div id="resizable"></div>
+    <div id="draggable">Drag Me!</div>
 
-    <div id="also"></div>
+    <div id="droppable"></div>
 
   <script type="text/javascript">
-    // Synchronous resize
-    $("#resizable").resizable({
-      grid: 50,
-      alsoResize: "#also",
-      resize: function(event, ui) {
 
-        if ($("#resizable").width() > 300) {
-          alert("Big enough!");
-        }
+    $("#draggable").draggable();
+
+    $("#droppable").droppable({
+      drop: function(event, ui) {
+        alert("Dropped!");
       }
     });
-
-    $("#also").resizable();
 
   </script>
 
