--- a/code_bin.html
+++ b/code_bin.html
@@ -22,23 +22,41 @@
 
     #header {
       width: 100%;
-      height: 20px;
+      height: 30px;
       background-color: #EEEEEE;
       padding: 5px;
     }
 
     #logo {
       float: left;
+      font-weight: bold;
+      font-size: 120%;
+      padding: 3px 5px;
     }
 
     #buttonContainer {
-      width: 200px;
+      width: 233px;
       margin: 0 auto;
 
     }
 
     .toggleButton {
       float: left;
+      border: 1px solid grey;
+      padding: 6px;
+      border-right: none;
+      font-size: 90%;
+    }
+
+    #html {
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+
+    #output {
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      border-right: 1px solid grey;
     }
 
   </style>
