Add button hover and click style changes

--- a/code_bin.html
+++ b/code_bin.html
@@ -59,6 +59,14 @@
       border-right: 1px solid grey;
     }
 
+    .active {
+      background-color: #E8F2FF;
+    }
+
+    .highlightedButton {
+      background-color: grey;
+    }
+
   </style>
 </head>
 
@@ -68,16 +76,25 @@
     <div id="logo">CodeBin</div>
 
     <div id="buttonContainer">
-      <div class="toggleButton" id="html">HTML</div>
+      <div class="toggleButton active" id="html">HTML</div>
       <div class="toggleButton" id="css">CSS</div>
       <div class="toggleButton" id="javascript">JavaScript</div>
-      <div class="toggleButton" id="output">Output</div>
+      <div class="toggleButton active" id="output">Output</div>
 
     </div>
   </div>
   <script type="text/javascript">
+    $(".toggleButton").hover(function() {
+      $(this).addClass("highlightedButton");
+    }, function() {
+      $(this).removeClass("highlightedButton");
+    });
 
+    $(".toggleButton").click(function() {
+      $(this).toggleClass("active");
 
+      $(this).removeClass("highlightedButton");
+    })
   </script>
 
 </body>
