--- a/code_bin.html
+++ b/code_bin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- doctype removed -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -28,6 +28,14 @@
 
     </div>
   </div>
+
+  <div id="bodyContainer">
+
+    <textarea id="htmlTextarea">Enter code here.</textarea>
+
+  </div>
+
+
   <script type="text/javascript" src="code_bin.js"></script>
 
 </body>
