Add output iframe and connect html field

--- a/code_bin.html
+++ b/code_bin.html
@@ -31,8 +31,9 @@
 
   <div id="bodyContainer">
 
-    <textarea id="htmlTextarea">Enter code here.</textarea>
+    <textarea id="htmlPanel" class="panel">Enter code here.</textarea>
 
+    <iframe id="outputPanel" class="panel"></iframe>
   </div>
 
 
