--- a/code_bin.html
+++ b/code_bin.html
@@ -31,7 +31,11 @@
 
   <div id="bodyContainer">
 
-    <textarea id="htmlPanel" class="panel">Enter code here.</textarea>
+    <textarea id="htmlPanel" class="panel">Hello World!</textarea>
+
+    <textarea id="cssPanel" class="panel hidden">p { color: green; }</textarea>
+
+    <textarea id="javascriptPanel" class="panel hidden">console.log("Javascript running...");</textarea>
 
     <iframe id="outputPanel" class="panel"></iframe>
   </div>
