Add p tag in initial html field

--- a/code_bin.html
+++ b/code_bin.html
@@ -31,7 +31,7 @@
 
   <div id="bodyContainer">
 
-    <textarea id="htmlPanel" class="panel">Hello World!</textarea>
+    <textarea id="htmlPanel" class="panel">&lt;p&gt;Hello World!&lt;/&gt;</textarea>
 
     <textarea id="cssPanel" class="panel hidden">p { color: green; }</textarea>
 
